--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
 
     
     <div c Item</h3>
-      <p>Misplaced something? Post the details and a photo in under a minute.</p>
+      <p>Misplaced details and a photo in under a minute.</p>
     </div>
     <div class="feature-card">
       <h3>🙌 Post a Found Item</h3>
