--- a/frontend/src/app/components/change-password/change-password.component.html
+++ b/frontend/src/app/components/change-password/change-password.component.html
@@ -2,10 +2,7 @@
     <h2>Change Your Password</h2>
     <form (ngSubmit)="changePassword()">
         <div class="input-group">
-            <label for="oldPassword">Old Password</label>
-            <input type="password" id="oldPassword" name="oldPassword" [(ngModel)]="passwordData.oldPassword" required>
-        </div>
-        <div class="input-group">
+            <lab
             <label for="newPassword">New Password</label>
             <input type="password" id="newPassword" name="newPassword" [(ngModel)]="passwordData.newPassword" required>
         </div>
